<resources>
    <string name="app_name">Weather</string>
    <string name="temperature">Temperature</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hour_date">Hour</string>
    <string name="hour_temperature">TempHour</string>
    <string name="temp_day">1</string>
    <string name="temp_night">-1</string>
    <string name="day_week">Monday</string>
    <string name="hour">22</string>
    <string name="temp_hour">5</string>
    <string name="city">City</string>
    <string name="description">description</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunrise_time">06:59</string>
    <string name="sunset">Sunset</string>
    <string name="sunset_time">18:59</string>
    <string name="pressure">Pressure</string>
    <string name="pressure_value">847</string>
    <string name="hpa">hPa</string>
    <string name="humidity">Humidity</string>
    <string name="humidity_value">60</string>
    <string name="percent">%</string>
    <string name="feels_like">Feels like</string>
    <string name="feels_like_value">7</string>
    <!--celsius - \u00B0-->
    <string name="degree">°</string>
    <string name="cloudiness">Cloudiness</string>
    <string name="cloudiness_value">46</string>
    <string name="wind_speed">Wind speed</string>
    <string name="wind_speed_value">14</string>
    <string name="metre_sec">m/s</string>
    <string name="uv_index">UV-Index</string>
    <string name="uv_index_value">3.3</string>
    <string name="by_location">Continue</string>
    <string name="text_location_perm">Allow weather to provide you with the most accurate forecast by allowing us to use your device location</string>
    <!-- searchable -->
    <string name="search_hint">Search city</string>
    <string name="country">country</string>
    <string name="day_temperature">Day temperature</string>
    <string name="morning_temperature">Morning temperature</string>
    <string name="night_temperature">Night temperature</string>
    <string name="evening_temperature">Evening temperature</string>
    <string name="feels_like_day">Feels like (day)</string>
    <string name="feels_like_night">Feels like (night)</string>
    <string name="wind_gust">Wind direction</string>
    <string name="default_value">-</string>
    <string name="probability_of_precipitation">Probability of precipitation</string>
    <string name="atmospheric_pressure">Atmospheric pressure</string>
    <string name="feels_like_evening">Feels like (evening)</string>
    <string name="feels_like_morning">Feels like (morning)</string>
    <string name="visibility">Visibility</string>
    <string name="my_location">My location</string>
</resources>