<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="45dp"
    android:overScrollMode="never"
    android:clipToPadding="false"
    app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/contentScrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewDailyDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:id="@+id/viewLong3"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/viewLongHeight"
            android:background="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerViewDailyDay" />

        <TextView
            android:id="@+id/sunrise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="3dp"
            android:text="@string/sunrise"
            android:textSize="@dimen/text_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewLong3"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/sunriseTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/sunrise_time"
            android:textSize="@dimen/description_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sunrise" />

        <View
            android:id="@+id/viewLong4"
            android:layout_width="0dp"
            android:layout_height="@dimen/viewLongHeight"
            android:layout_marginTop="3dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sunriseTime"
            app:layout_constraintWidth_percent="0.929" />

        <TextView
            android:id="@+id/sunset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="3dp"
            android:text="@string/sunset"
            android:textSize="@dimen/text_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewLong4"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/sunsetTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/sunset_time"
            android:textSize="@dimen/description_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sunset" />

        <View
            android:id="@+id/viewLong5"
            android:layout_width="0dp"
            android:layout_height="@dimen/viewLongHeight"
            android:layout_marginTop="3dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sunsetTime"
            app:layout_constraintWidth_percent="0.929" />

        <TextView
            android:id="@+id/pressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="3dp"
            android:text="@string/pressure"
            android:textSize="@dimen/text_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewLong5"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/pressureValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/pressure_value"
            android:textSize="@dimen/description_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pressure" />

        <TextView
            android:id="@+id/hPa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/hpa"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@id/pressureValue"
            app:layout_constraintTop_toBottomOf="@id/pressure" />

        <View
            android:id="@+id/viewLong6"
            android:layout_width="0dp"
            android:layout_height="@dimen/viewLongHeight"
            android:layout_marginTop="3dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pressureValue"
            app:layout_constraintWidth_percent="0.929" />

        <TextView
            android:id="@+id/humidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="3dp"
            android:text="@string/humidity"
            android:textSize="@dimen/text_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewLong6"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/humidityValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/humidity_value"
            android:textSize="@dimen/description_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/humidity" />

        <TextView
            android:id="@+id/percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/percent"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@id/humidityValue"
            app:layout_constraintTop_toBottomOf="@id/humidity" />

        <View
            android:id="@+id/viewLong7"
            android:layout_width="0dp"
            android:layout_height="@dimen/viewLongHeight"
            android:layout_marginTop="3dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/humidityValue"
            app:layout_constraintWidth_percent="0.929" />

        <TextView
            android:id="@+id/feelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="3dp"
            android:text="@string/feels_like"
            android:textSize="@dimen/text_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewLong7"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/feelsLikeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/feels_like_value"
            android:textSize="@dimen/description_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/feelsLike" />

        <TextView
            android:id="@+id/degree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:text="@string/degree"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@id/feelsLikeValue"
            app:layout_constraintTop_toBottomOf="@id/feelsLike" />

        <View
            android:id="@+id/viewLong8"
            android:layout_width="0dp"
            android:layout_height="@dimen/viewLongHeight"
            android:layout_marginTop="3dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/feelsLikeValue"
            app:layout_constraintWidth_percent="0.929" />

        <TextView
            android:id="@+id/cloudiness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="3dp"
            android:text="@string/cloudiness"
            android:textSize="@dimen/text_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewLong8"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/cloudinessValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/cloudiness_value"
            android:textSize="@dimen/description_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cloudiness" />

        <TextView
            android:id="@+id/percent2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/percent"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@id/cloudinessValue"
            app:layout_constraintTop_toBottomOf="@id/cloudiness" />

        <View
            android:id="@+id/viewLong9"
            android:layout_width="0dp"
            android:layout_height="@dimen/viewLongHeight"
            android:layout_marginTop="3dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cloudinessValue"
            app:layout_constraintWidth_percent="0.929" />

        <TextView
            android:id="@+id/windSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="3dp"
            android:text="@string/wind_speed"
            android:textSize="@dimen/text_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewLong9"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/windSpeedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/wind_speed_value"
            android:textSize="@dimen/description_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/windSpeed" />

        <TextView
            android:id="@+id/metreSec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:text="@string/metre_sec"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@id/windSpeedValue"
            app:layout_constraintTop_toBottomOf="@id/windSpeed" />

        <View
            android:id="@+id/viewLong10"
            android:layout_width="0dp"
            android:layout_height="@dimen/viewLongHeight"
            android:layout_marginTop="3dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/windSpeedValue"
            app:layout_constraintWidth_percent="0.929" />

        <TextView
            android:id="@+id/uvIndex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:layout_marginTop="3dp"
            android:text="@string/uv_index"
            android:textSize="@dimen/text_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/viewLong10"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/uvIndexValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="@string/uv_index_value"
            android:textSize="@dimen/description_value"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uvIndex" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>