<?xml version="1.0" encoding="utf-8"?>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/hourOfDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:textStyle="bold"
            android:textSize="36sp"
            android:textColor="@color/black"
            android:gravity="center|start"
            android:shadowColor="@color/black_grey"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/descriptionHour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:layout_marginStart="18dp"
            android:layout_marginBottom="6dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/detailFrameFeelsLike"/>

        <ImageView
            android:id="@+id/weatherHourView"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="17dp"
            android:src="@mipmap/ic_launcher"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <FrameLayout
        android:id="@+id/detailFrameFeelsLike"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:background="@color/grey_back_framelayout"
        android:elevation="10dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/detailFrameVisibility"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center|top"
            android:text="@string/feels_like"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black_grey"
            android:gravity="center" />
        <TextView
            android:id="@+id/feelsLikeHourValue"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:textSize="@dimen/text_size_detail_weaher"
            android:gravity="center"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/detailFrameVisibility"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:background="@color/grey_back_framelayout"
        android:elevation="10dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/detailFrameFeelsLike"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center|top"
            android:text="@string/visibility"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black_grey"
            android:gravity="center" />
        <TextView
            android:id="@+id/visibilityHourValue"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:textSize="@dimen/text_size_detail_weaher"
            android:gravity="center"/>
    </FrameLayout>

        <FrameLayout
            android:id="@+id/detailFrameWindSpeed"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey_back_framelayout"
            android:elevation="10dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/detailFrameWindDeg"
            app:layout_constraintTop_toBottomOf="@id/detailFrameFeelsLike">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|top"
                android:text="@string/wind_speed"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black_grey"
                android:gravity="center" />
            <TextView
                android:id="@+id/windSpeedHourValue"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:textSize="@dimen/text_size_detail_weaher"
                android:gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/detailFrameWindDeg"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey_back_framelayout"
            android:elevation="10dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detailFrameWindSpeed"
            app:layout_constraintTop_toBottomOf="@id/detailFrameVisibility">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|top"
                android:text="@string/wind_gust"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black_grey"
                android:gravity="center" />
            <TextView
                android:id="@+id/windDegHourValue"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:textSize="@dimen/text_size_detail_weaher"
                android:gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/detailFrameClouds"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey_back_framelayout"
            android:elevation="10dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/detailFrameUVi"
            app:layout_constraintTop_toBottomOf="@id/detailFrameWindSpeed">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|top"
                android:text="@string/cloudiness"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black_grey"
                android:gravity="center" />
            <TextView
                android:id="@+id/cloudinessHourValue"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:textSize="@dimen/text_size_detail_weaher"
                android:gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/detailFrameUVi"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey_back_framelayout"
            android:elevation="10dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detailFrameClouds"
            app:layout_constraintTop_toBottomOf="@id/detailFrameWindDeg">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|top"
                android:text="@string/uv_index"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black_grey"
                android:gravity="center" />
            <TextView
                android:id="@+id/uvIndexHourValue"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:textSize="@dimen/text_size_detail_weaher"
                android:gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/detailFramePop"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey_back_framelayout"
            android:elevation="10dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/detailFrameHum"
            app:layout_constraintTop_toBottomOf="@id/detailFrameClouds">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|top"
                android:text="@string/probability_of_precipitation"
                android:textStyle="bold"
                android:textSize="14sp"
                android:textColor="@color/black_grey"
                android:gravity="center" />
            <TextView
                android:id="@+id/popHourValue"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:textSize="@dimen/text_size_detail_weaher"
                android:gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/detailFrameHum"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey_back_framelayout"
            android:elevation="10dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detailFramePop"
            app:layout_constraintTop_toBottomOf="@id/detailFrameUVi">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|top"
                android:text="@string/humidity"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black_grey"
                android:gravity="center" />
            <TextView
                android:id="@+id/humidityHourValue"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:textSize="@dimen/text_size_detail_weaher"
                android:gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/detailFramePressure"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey_back_framelayout"
            android:elevation="10dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/detailFrameDewPoint"
            app:layout_constraintTop_toBottomOf="@id/detailFramePop">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|top"
                android:text="@string/pressure"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black_grey"
                android:gravity="center" />
            <TextView
                android:id="@+id/pressureHourValue"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:textSize="@dimen/text_size_detail_weaher"
                android:gravity="center"/>
        </FrameLayout>

        <FrameLayout
            android:id="@+id/detailFrameDewPoint"
            android:layout_width="180dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:background="@color/grey_back_framelayout"
            android:elevation="10dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/detailFramePressure"
            app:layout_constraintTop_toBottomOf="@id/detailFrameHum">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|top"
                android:text="@string/atmospheric_pressure"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textColor="@color/black_grey"
                android:gravity="center" />
            <TextView
                android:id="@+id/dewPointHourValue"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="center|bottom"
                android:textSize="@dimen/text_size_detail_weaher"
                android:gravity="center"/>
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>